# tantivy-merge-policy-demo

./: .gitignore  Cargo.toml  Makefile  README.md
data/: .gitignore  generate.js  package-lock.json  package.json  people.json
logs/: parse_merge_policy_stats.py
src/: config.rs
src/models/: address.rs  person.rs
src/store/: mod.rs  people.rs
src/store/utils/: index_value.rs  merge_policy.rs  mod.rs
