[package]
name = "tantivy_merge_policy_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
async_once = "0.2.6"
lazy_static = "1.4.0"
serde = "1.0.198"
serde_json = "1.0.118"
tantivy = { git = "https://github.com/quickwit-oss/tantivy", rev = "0321e8c20ac7008dbdf0b05aeb7ca04231186ee8" }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
